bugfixed in loading modal z-index

--- a/frontend/pages/dashboard/routes/Setting/styles/setting.css
+++ b/frontend/pages/dashboard/routes/Setting/styles/setting.css
@@ -25,6 +25,7 @@
 }
 
 .info_loading {
+  composes: modal-z-index from 'STYLES/common.css';
   position: absolute;
   top: 0;
   bottom: 0;
